--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
 </head>
 <body>
   <main class="container">
-    <header class="hero fade-in" tabindex="0">
+    <header class="hero fade-in growable" tabindex="0">
       <h1 class="hero-title">プロフィール</h1>
     </header>
 
-    <section id="about" class="card fade-in" tabindex="0">
+    <section id="about" class="card fade-in growable" tabindex="0">
       <h2>自己紹介</h2>
       <ul>
         <li>所属：大阪公立大学工業高等専門学校2年</li>
@@ -24,7 +24,7 @@
       <h2 class="skills-banner-title">スキル</h2>
     </section>
 
-    <section id="skills" class="card skills-card fade-in" tabindex="0">
+    <section id="skills" class="card skills-card fade-in growable" tabindex="0">
       <h2 class="visually-hidden">プログラムスキル</h2>
       <div class="skills-inner">
         <h3 class="skills-subtitle">プログラムスキル</h3>
@@ -39,7 +39,7 @@
       </div>
     </section>
 
-    <section id="tools" class="card fade-in" tabindex="0">
+    <section id="tools" class="card fade-in growable" tabindex="0">
       <h2>ツール</h2>
       <div class="tags">
         <span class="tag">VSCode</span>
@@ -49,9 +49,7 @@
       </div>
     </section>
 
-    <footer class="fade-in" tabindex="0">
-      <p class="small muted">This page is a template — 編集してお使いください。</p>
-    </footer>
+    
   </main>
 
   <script src="/my-portfolio/script.js"></script>
