--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <main class="container">
-    <header class="hero fade-in glowable" tabindex="0">
+    <header class="card skills-card fade-in glowable" tabindex="0">
       <h1 class="hero-title">プロフィール</h1>
     </header>
 
