--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       </div>
     </section>
 
-    <section id="tools" class="card fade-in glowable" tabindex="0">
+    <section id="tools" class="card skills-card fade-in glowable" tabindex="0">
       <h2>ツール</h2>
       <div class="tags">
         <span class="tag">VSCode</span>
