update index.html and styles.css

--- a/index.html
+++ b/index.html
@@ -29,23 +29,22 @@
       <div class="skills-inner">
         <h3 class="skills-subtitle">プログラムスキル</h3>
         <div class="tags">
-          <span class="tag">Python</span>
-          <span class="tag">C++</span>
-          <span class="tag">Java</span>
-          <span class="tag">CSS</span>
-          <span class="tag">HTML</span>
+          <span class="tag" tabindex="0" data-desc="学校授業レベル">Python</span>
+          <span class="tag" tabindex="0" data-desc="基礎的な部分のみ．高専祭の展示にあたって使用しました">Java</span>
+          <span class="tag" tabindex="0" data-desc="このページの作成に使用．初歩的な内容のみ">CSS</span>
+          <span class="tag" tabindex="0" data-desc="このページの作成に使用．初歩的な内容のみ">HTML</span>
         </div>
         
       </div>
     </section>
 
     <section id="tools" class="card skills-card fade-in glowable" tabindex="0">
-      <h2>ツール</h2>
+      <h2>ソフトウェア</h2>
       <div class="tags">
-        <span class="tag">VSCode</span>
-        <span class="tag">Arduino</span>
-        <span class="tag">Google Colab</span>
-        <span class="tag">Deeds dcs</span>
+        <span class="tag"tabindex="0" data-desc="pythonやHTML・CSSを書くのに使用しています">VSCode</span>
+        <span class="tag"tabindex="0" data-desc="部活動や学校授業で使用しています．Arduino言語は基本的な範囲でできます">Arduino</span>
+        <span class="tag"tabindex="0" data-desc="学校授業で使用しています．">Google Colab</span>
+        <span class="tag"tabindex="0" data-desc="学校授業で使用しています．初歩的な部分から勉強中です">Deeds dcs</span>
       </div>
     </section>
 
