--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <span class="tag" tabindex="0" data-desc="このページの作成に使用．初歩的な内容のみ">CSS</span>
           <span class="tag" tabindex="0" data-desc="このページの作成に使用．初歩的な内容のみ">HTML</span>
         </div>
-        
+        <p>各タグにカーソルを合わせて説明を表示</p>
       </div>
     </section>
 
@@ -46,6 +46,7 @@
         <span class="tag"tabindex="0" data-desc="学校授業で使用しています．">Google Colab</span>
         <span class="tag"tabindex="0" data-desc="学校授業で使用しています．初歩的な部分から勉強中です">Deeds dcs</span>
       </div>
+      <p>各タグにカーソルを合わせて説明を表示</p>
     </section>
 
     
