--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>自己紹介 — Taichi Hagiwara</title>
+  <title>portfolio — Taichi Hagiwara</title>
   <link rel="stylesheet" href="/my-portfolio/styles.css">
 </head>
 <body>
@@ -63,7 +63,18 @@
       </ul>
     </section>
 
-    <!-- ここから連絡先セクションを追加 -->
+    <section id="products" class="card fade-in glowable" tabindex="0">
+      <h2>minecraft×高専</h2>
+      <ul>
+        <li>
+          <p>高専祭の展示で，私たちの班はminecraftのMODを作りました．使用言語はJAVAで，他にもMcreatorなどのツールを使用しています．高専の校舎を再現したマップで，高専生活を再現したアイテムを駆使し，先生と戦って単位を集め，進級を目指します．</p>
+        </li>
+      </ul>
+    </section>
+
+
+
+    <!-- ここから連絡先セクション -->
     <section id="contact" class="card fade-in glowable" tabindex="0" aria-label="連絡先">
       <h2>連絡先</h2>
       <p>ご連絡・ご相談は以下の方法でどうぞ。</p>
