--- a/index.html
+++ b/index.html
@@ -67,7 +67,11 @@
       <h2>minecraft×高専</h2>
       <ul>
         <li>
+
           <p>高専祭の展示で，私たちの班はminecraftのMODを作りました．使用言語はJAVAで，他にもMcreatorなどのツールを使用しています．高専の校舎を再現したマップで，高専生活を再現したアイテムを駆使し，先生と戦って単位を集め，進級を目指します．</p>
+          <p style="margin-top:12px;">
+            <a class="tag" href="/my-portfolio/files/kosenmod-1.0.0.zip" download="kosenmod-1.0.0.zip" data-desc="MODのダウンロード（これ単体で遊ぶことはできません・マップは含まれていません）" role="button">ダウンロード（MOD/マップ）</a>
+          </p>
         </li>
       </ul>
     </section>
@@ -81,7 +85,7 @@
 
       <div class="tags">
        
-        <a class="tag" href="rc24089j@st.omu.ac.jp" tabindex="0" data-desc="rc24089j@st.omu.ac.jp">メールを送る</a>
+        <a class="tag" href="mailto:rc24089j@st.omu.ac.jp" tabindex="0" data-desc="rc24089j@st.omu.ac.jp">メールを送る</a>
       
         <a class="tag" href="https://github.com/taichi-hagiwara" target="_blank" rel="noopener noreferrer" tabindex="0" data-desc="GitHub プロフィール（taichi-hagiwara）">GitHub</a>
 
