--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
     <section id="about" class="card fade-in glowable" aria-hidden="false" tabindex="0">
       <h2>自己紹介</h2>
       <ul>
-        <li>所属：大阪公立大学工業高等専門学校2年</li>
-        <li>知能情報コース</li>
+        <li>所属：大阪公立大学工業高等専門学校2年 知能情報コース</li>
+        <li>プログラミングを勉強中</li>
       </ul>
     </section>
 
@@ -39,12 +39,13 @@
     </section>
 
     <section id="tools" class="card skills-card fade-in glowable" tabindex="0">
-      <h2>ソフトウェア</h2>
+      <h2>ソフトウェア・ツール</h2>
       <div class="tags">
         <span class="tag" tabindex="0" data-desc="pythonやHTML・CSSを書くのに使用しています">VSCode</span>
         <span class="tag" tabindex="0" data-desc="部活動や学校授業で使用しています．Arduino言語は基本的な範囲でできます">Arduino</span>
         <span class="tag" tabindex="0" data-desc="学校授業で使用しています．">Google Colab</span>
         <span class="tag" tabindex="0" data-desc="学校授業で使用しています．初歩的な部分から勉強中です">Deeds dcs</span>
+        <span class="tag" tabindex="0" data-desc="使用回数は多くありません．コマンドラインでの操作を一通りできます">git/Github</span>
       </div>
       <p>各タグにカーソルを合わせて説明を表示</p>
     </section>
