--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
         <li>
 
           <p>高専祭の展示で，私たちの班はminecraftのMODを作りました．使用言語はJAVAで，他にもMcreatorなどのツールを使用しています．高専の校舎を再現したマップで，高専生活を再現したアイテムを駆使し，先生と戦って単位を集め，進級を目指します．</p>
+          <img src="スクリーンショット 2025-11-21 224054.png" alt="minecraft×高専のスクリーンショット1" style="max-width:100%;height:auto;margin-top:12px;">
+          <img src="スクリーンショット 2025-11-21 224256.png" alt="minecraft×高専のスクリーンショット2" style="max-width:100%;height:auto;margin-top:12px;">
+          <img src="スクリーンショット 2025-11-22 014613.png" alt="minecraft×高専のスクリーンショット3" style="max-width:100%;height:auto;margin-top:12px;">
           <p style="margin-top:12px;">
-            <a class="tag" href="kosenmod-1.0.0.zip" data-desc="MODのダウンロード（これ単体で遊ぶことはできません・マップは含まれていません）" role="button">ダウンロード（MOD/マップ）</a>
+            <a class="tag" href="kosenmod-1.0.0.zip" data-desc="MODのダウンロード（これ単体で遊ぶことはできません・マップは含まれていません）" role="button">ダウンロード（MOD）</a>
           </p>
         </li>
       </ul>
