update 1 file and delete 6 files

--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
         <li>
           <a href="https://colab.research.google.com/drive/11fhEgxKwum8fJ8TYAc2gWfTlpfFD-NHR?usp=sharing&classId=246edd3b-092a-476c-8957-e6f0f67944ef&assignmentId=088c058f-36d3-493f-9a62-b2a574b01d46&submissionId=a4c1ea14-6688-0fac-c537-52884c74d1ad">リンク</a>
           <p>学校の課題で作成したpythonプログラムです．ipywidgetsを用いて，コマンドバトルRPGを作りました．一度負けたら最初からになる仕様で，一度敵を倒すごとに獲得する効果を選ぶことができます。</p>
-          <img src="スクリーンショット 2025-11-21 022925.png" alt="ローグライクRPGのスクリーンショット1" style="max-width:100%;height:auto;margin-top:12px;">
-          <img src="スクリーンショット 2025-11-21 023125.png" alt="ローグライクRPGのスクリーンショット2" style="max-width:100%;height:auto;margin-top:12px;">
-          <img src="スクリーンショット 2025-11-21 023156.png" alt="ローグライクRPGのスクリーンショット3" style="max-width:100%;height:auto;margin-top:12px;">
+          <img src="img1.png" alt="ローグライクRPGのスクリーンショット1" style="max-width:100%;height:auto;margin-top:12px;">
+          <img src="img2.png" alt="ローグライクRPGのスクリーンショット2" style="max-width:100%;height:auto;margin-top:12px;">
+          <img src="img3.png" alt="ローグライクRPGのスクリーンショット3" style="max-width:100%;height:auto;margin-top:12px;">
         </li>
       </ul>
     </section>
@@ -73,9 +73,9 @@
         <li>
 
           <p>高専祭の展示で，私たちの班はminecraftのMODを作りました．使用言語はJAVAで，他にもMcreatorなどのツールを使用しています．高専の校舎を再現したマップで，高専生活を再現したアイテムを駆使し，先生と戦って単位を集め，進級を目指します．</p>
-          <img src="スクリーンショット 2025-11-21 224054.png" alt="minecraft×高専のスクリーンショット1" style="max-width:100%;height:auto;margin-top:12px;">
-          <img src="スクリーンショット 2025-11-21 224256.png" alt="minecraft×高専のスクリーンショット2" style="max-width:100%;height:auto;margin-top:12px;">
-          <img src="スクリーンショット 2025-11-22 014613.png" alt="minecraft×高専のスクリーンショット3" style="max-width:100%;height:auto;margin-top:12px;">
+          <img src="img4.png" alt="minecraft×高専のスクリーンショット1" style="max-width:100%;height:auto;margin-top:12px;">
+          <img src="img5.png" alt="minecraft×高専のスクリーンショット2" style="max-width:100%;height:auto;margin-top:12px;">
+          <img src="img6.png" alt="minecraft×高専のスクリーンショット3" style="max-width:100%;height:auto;margin-top:12px;">
           <p style="margin-top:12px;">
             <a class="tag" href="kosenmod-1.0.0.zip" data-desc="MODのダウンロード（これ単体で遊ぶことはできません・マップは含まれていません）" role="button">ダウンロード（MOD）</a>
           </p>
